# athen

./: .gitignore  Dockerfile  ProjectHome.md  README.md  athen.ldif  config.ldif  debconf.keys  dovecot  jog.schema  lo-template.ott  manifesto.md  requirements.txt  setup.cfg  whitepaper.md
athen/client/: gui.py  imap.py  unix.py  windows.py
athen/hub/: =  athen2.ldif  auth.py  client.conf  client.crt  client.csr  client.key  config-tmp.ldif  db.py  error.py  fhir.py  hub.tac  resource.py  schema.sql  server.crt  server.csr  server.key  server.py  test_server.py  tmp  twistd.pid  validate.py
athen/lib/: config.py  myldap.py  pit.py  rtf.py  textparse.py  userdb.py  util.py
client/: base.py  gui.py  imap.py  rtf.py  tests.py  unix.py  windows.py
etc/dovecot/: dovecot-ldap.conf.ext
experimental/: setup.py
experimental/client/: base.py
experimental/tor/: common.py  onion.py
hub/: Dockerfile  athen.ldif  base.ldif  config.ldif  create-server.sh  supervisord.conf
hub/apache.conf/: 000-default.conf  default-ssl.conf
hub/cgi-bin/: hub.py  hub.wsgi  mail.py  report.py  server.py  (+2 more)
lib/: athen_file.rb  athen_mail.rb  base.py  config.py  dsn.py  file.rb  htmlparse.py  mailfilter.py  myldap.py  pgpmime.py  pit.py  registry.py  rtf.py  setuid.py  util.py
pam/: pam_script_auth
python/: util.py
server/: Dockerfile  athen.ldif  athen2.ldif  base.ldif  config.ldif  debconf.keys  develop.sh  ldap.backup.ldif  schema.sql  servant.sh  setup.sh  user-shim  user-shim.c
trunk/: README
windows/: README.md  athen.nsi  backshell.ps1  fetch-files.ps1  gui.ps1  task.ps1
(+152 files in other folders)
