[metadata]

name = athen
version = 0.0.2
description = standard-compliant medical messaging 
author = Ian Haywood
author_email = ian@haywood.id.au
url = https://github.com/ihaywood3/athen
project_urls =
    Bug Tracker = https://github.com/ihaywood3/athen/issues
long_description = file: README.md
long_description_content_type = text/markdown
keywords = medical, hl7, fhir
license = GNU GPL 3
classifiers =
    Development Status :: 1 - Planning
    Framework :: Twisted
    Environment :: Web Environment
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Communications
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Intended Audience :: Healthcare Industry



[options]

zip_safe = False
include_package_data = True
install_requires =
    mako
    markdown
    Twisted >= 21.2.0
    ZODB >= 5.6.0
    BTrees >= 4.9.2
    attrs >= 21.2.0

packages = athen.hub



#[options.entry_points]

#console_scripts =
#    mailblog = mailblog.blog:entry_point
    